--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -96,8 +96,9 @@
     top: -1770px; //animation page
     top: -47px; //contacts wide
     top: -6px; //contacts mobile
-    // top: -200px;
-    left: 0; //product.jpg
+    // top: -162px;
+    top: 9px;
+    left: 11px; //product.jpg
     // top: -252px;
     // top: -58px;
     // left: 64px;//footer main
@@ -107,7 +108,7 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    // content: url('../screens/service-page.jpg');
+    // content: url('../screens/methods-page.jpg');
     opacity: 1;
   }
 
