--- a/src/pages/company.pug
+++ b/src/pages/company.pug
@@ -21,7 +21,7 @@ block content
     section.profile.profile--company.mt-30px.lg_mt-20px.mb-50px
       .profile__content.container
         h1.section__title.mb-20px.lg_mb-40px Профиль пользователя
-        .choices-select.choices-select--profile.field-select__wrapper.lg_hidden.mb-20px
+        .choices-select.field-select__wrapper.lg_hidden.mb-20px
           select#profile-page-select.profile__page-select.page-select__input.field-select.md_hidden(role='tablist')
             option(value='/company.html#1' data-icon="person" selected) Личные данные
             option(value='/company.html#2' data-icon="receipt") Мои заказы
