--- a/src/pages/orders.pug
+++ b/src/pages/orders.pug
@@ -21,7 +21,7 @@ block content
     section.profile.profile--orders.mt-30px.lg_mt-20px.mb-50px
       .profile__content.container
         h1.section__title.mb-20px.lg_mb-40px Мои заказы
-        .choices-select.choices-select--orders.field-select__wrapper.lg_hidden.mb-20px
+        .choices-select.field-select__wrapper.lg_hidden.mb-20px
           select#profile-page-select
             option(value='1' data-icon="person" data-href='/orders.html#1') Личные данные
             option(value='2' data-icon="receipt" data-href='/orders.html#2' selected) Мои заказы
