--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -18,6 +18,15 @@
 // }
 
 
+////methods
+
+// .books__img {
+//   outline: 1px solid red;
+//   img {
+//     opacity: 0;
+//   }
+// }
+
 ////personal
 
 
@@ -121,7 +130,7 @@
 //   outline: 1px solid red !important;
 // }
 
-// //cure
+// // //cure
 
 // .article-index > div {
 //   outline: 1px solid red;
