--- a/src/blocks/cure/cure.scss
+++ b/src/blocks/cure/cure.scss
@@ -19,12 +19,24 @@
     @media (min-width: $screen-xxl) {
       grid-template-columns: 1fr 48px 373px;
     }
+
+    .profile & {
+      display: block !important;
+    }
   }
 
   &__article-index {
     @media (min-width: $screen-lg) {
       grid-column-start: 3;
       grid-column-end: 4;
+    }
+
+    .profile &>div {
+      @media (min-width: $screen-lg) {
+        display: grid;
+        grid-template-columns: 57px 40px 1fr;
+        margin-bottom: 10px;
+      }
     }
   }
 
@@ -36,6 +48,7 @@
       grid-row-end: 3;
       margin-top: 0;
     }
+
   }
 
   &__digits {
@@ -57,7 +70,7 @@
       padding-left: 40px;
     }
 
-    .author + div {
+    .author+div {
       @media (min-width: $screen-lg) {
         font-size: 20px;
       }
