--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -41,8 +41,8 @@ block content
             .slider-main__text.mt-30px.lg_mt-0
               h2.mt-0.md_text-40px.lg_text-48px Современная физиотерапия и&nbsp;реабилитация
               p Разрабатываем с нуля или оптимизируем ваш страховой договор так, чтобы вы получили лучшие условия за меньшие деньги.
-              .slider-main__text-bottom.xxl_mt-25px
-                +btn('Подробнее','regular')(href="#")
+              .slider-main__text-bottom.xxl_mt-25px(data-tabs-anchor)
+                +btn('Подробнее','regular')(data-anchor="#structure")
           +slider-item--main({url: '/video/SampleVideo_360x240_5mb.mp4', width: 360, height: 240, type: 'video/mp4', poster: 'poster_002.jpg'})
             .slider-main__text.mt-30px.lg_mt-0
               h2.mt-0.md_text-40px.lg_text-48px slide 2
