--- a/src/scss/_tailwind-colours.scss
+++ b/src/scss/_tailwind-colours.scss
@@ -17,7 +17,7 @@ $tw-white: #fff;
 $tw-neutral: undefined; 
 $tw-red-50: #FFF5F5; 
 $tw-red-100: #fee2e2; 
-$tw-red-200: #fecaca; 
+$tw-red-200: #F9EAEA; 
 $tw-red-300: #fca5a5; 
 $tw-red-400: #f87171; 
 $tw-red-500: #EC6565; 
@@ -48,6 +48,7 @@ $tw-green-600: #16a34a;
 $tw-green-700: #15803d; 
 $tw-green-800: #166534; 
 $tw-green-900: #14532d; 
+$tw-brown: #A95C5C; 
 $tw-emerald: undefined; 
 $tw-teal: undefined; 
 $tw-cyan: undefined; 
