--- a/src/blocks/info-accordion/info-accordion.scss
+++ b/src/blocks/info-accordion/info-accordion.scss
@@ -8,13 +8,24 @@
 
   border-bottom: 1px solid $tw-gray-200;
 
+  &__item {
+  }
+
   &__item-pane {
     padding: 20px;
     border-radius: 20px;
-    background-color: $tw-gray-200;
+    background-color: $tw-gray-100;
 
     @media (min-width: $screen-lg) {
       padding: 30px;
+    }
+  }
+
+  &__collapse {
+    padding-left: 10px;
+
+    @media (min-width: $screen-lg) {
+      padding-left: 0;
     }
   }
 
@@ -24,6 +35,7 @@
     align-items: center;
     width: 100%;
     padding: 10px 0;
+    padding-left: 10px;
     border-top: 1px solid $tw-gray-200;
 
     @media (min-width: $screen-lg) {
@@ -39,6 +51,7 @@
     }
 
     svg {
+      margin-right: 10px;
       flex-shrink: 0;
 
       #vert {
