--- a/src/blocks/order/order.scss
+++ b/src/blocks/order/order.scss
@@ -1,8 +1,8 @@
-// В этом файле должны быть стили для БЭМ-блока my-order, его элементов,
+// В этом файле должны быть стили для БЭМ-блока order, его элементов,
 // модификаторов, псевдоселекторов, псевдоэлементов, @media-условий...
 // Очередность: http://nicothin.github.io/idiomatic-pre-CSS/#priority
 
-.my-order {
+.order {
 
   $block-name:                &; // #{$block-name}__element
 
