--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -97,8 +97,9 @@
     top: -47px; //contacts wide
     top: -6px; //contacts mobile
     // top: -162px;
-    top: 9px;
-    left: 11px; //product.jpg
+    top: -205px;
+    top: 2px;
+    left: 12px; //product.jpg
     // top: -252px;
     // top: -58px;
     // left: 64px;//footer main
@@ -108,7 +109,7 @@
     // top: -815px; //vacancies
     // top: -275px;
     //top: -5280px;
-    // content: url('../screens/methods-page.jpg');
+    content: url('../screens/my-orders2-page.jpg');
     opacity: 1;
   }
 
