--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -1,22 +1,40 @@
 
 // // //all
 
-// html * {
-//   color: red !important;
-//   border-color: red !important;
-//   background-color: transparent !important;
-// }
+html * {
+  color: red !important;
+  border-color: red !important;
+  background-color: transparent !important;
+}
 
-// .page-header {
-//   border-color: red !important;
-//   background-color: transparent !important;
-// }
+.page-header {
+  border-color: red !important;
+  background-color: transparent !important;
+}
 
-// input,
-// select {
-//   background-color: transparent !important;
-// }
+input,
+select {
+  background-color: transparent !important;
+}
 
+.order-payment__img {
+  outline: 1px solid red;
+  img {
+    opacity: 0;
+  }
+}
+
+.info-accordion__collapse {
+  outline: 1px solid red;
+}
+
+.order-shipment__img {
+  outline: 1px solid red;
+}
+
+.order-list__item-img {
+  outline: 1px solid red;
+}
 
 ////methods
 
