--- a/src/pages/article.pug
+++ b/src/pages/article.pug
@@ -488,7 +488,7 @@ block content
             ol
               li Клинические рекомендации. Ревматология/ под. ред. Е. Л. Насонова. М.: ГЭОТАР-Медиа, 2006. 288 с.
               li Артриты и артрозы. Диагностика, профилактика, лечение / Ж.А. Ржевская, Е.А. Романова. - М.: Мир Книги Ритейл, 2011. - 160 c.
-              li Частота поражений крупных суставов у взрослых. / К.И. Шапиро. Диагностика и лечение повреждений крупных суставов. / Л.,199 : 3–8.
+              li Частота поражений крупных суставов у взрослых. / К.И. Шапиро. Диагностика и лечение повреждений крупных суставов. / Л.,199 : 3–8. <a href="http://waltza.co.za/wp-content/uploads/2012/08/Dose_table_780-860nm_for_Low_Level_Laser_Therapy_WALT-2010.pdf" rel="nofollow" target="_blank">http://waltza.co.za/wp-content/uploads/2012/08/Dose_table_780-860nm_for_Low_Level_Laser_Therapy_WALT-2010.pdf</a>
         .article__aside.hidden.lg_block.lg_col-start-3.lg_row-start-3.lg_row-span-10
           .article__float
             .article__float-container
