--- a/src/pages/myorder.pug
+++ b/src/pages/myorder.pug
@@ -104,14 +104,14 @@ block content
                   .order-payment__order
                     .order-payment__icon
                       +svg('document-text','',{width:'42',height:'42'})
-                    .order-payment__name Заказ NeP-131/2022 от 16.08.2022. Новый заказ
-                    .order-payment__sum Сумма заказа: 22 700 руб
+                    .order-payment__name Заказ NeP-131/2022 от&nbsp;16.08.2022. Новый заказ
+                    .order-payment__sum Сумма заказа: 22&nbsp;700&nbsp;руб
                   .order-payment__payment
                     .order-payment__img
                       img(src='/img/cloud-payment.jpg')
                     .order-payment__payment-desc
                       .order-payment__name Счет NP-131/2022/1 от 16.08.2022, CloudPayments банковской картой он-лайн
-                      .order-payment__sum Сумма к оплате по счету: 22 700 руб
+                      .order-payment__sum Сумма к оплате по счету: 22&nbsp;700&nbsp;руб
                     .order-payment__status.order-status.order-status--not-paid Не оплачено
                     +btn('<span class="btn--hover-underline">Сменить способ оплаты</span><svg width="12" height="6" aria-hidden="true" focusable="false"><use xlink:href="/img/sprite.svg#angle-down"></use></svg>','clean,icon,icon-right')(class='order-payment__change inline-flex text-blue-1000 hover_text-blue-1000' href='#')
                   .order-payment__btns
