--- a/src/blocks/cart-page/cart-page.scss
+++ b/src/blocks/cart-page/cart-page.scss
@@ -10,7 +10,7 @@
     margin-bottom: 34px;
   }
 
-  .container {
+  #bx-soa-tanais-order-form {
     @media (min-width: $screen-lg) {
       display: grid;
       grid-template-columns: 1fr 20px 320px;
@@ -19,6 +19,28 @@
     @media (min-width: $screen-xxl) {
       grid-template-columns: 1fr 48px 400px;
     }
+  }
+
+  #bx-soa-tanais-order {
+    @media (min-width: $screen-lg) {
+      grid-column-start: 1;
+      grid-column-end: 2;
+    }
+  }
+
+  #bx-soa-total {
+    width: 100% !important;
+
+    @media (min-width: $screen-lg) {
+      grid-column-start: 3;
+      grid-row-start: 2;
+      grid-row-end: 4;
+      grid-column-end: 5;
+    }
+  }
+
+  .tanais-order .tanais-main-block {
+    padding-right: 0 !important;
   }
 
   .section__title--product-info {
@@ -80,6 +102,11 @@
       margin-bottom: 10px;
       @apply text-36px;
     }
+  }
+
+  .bx-soa-section {
+    box-shadow: none !important;
+    margin-bottom: 0;
   }
 
   .bx-soa-section-title {
@@ -155,8 +182,8 @@
     }
   }
 
-  &__delivery {
-    margin-top: 40px;
+  #bx-soa-delivery {
+    margin-top: 20px;
     box-shadow: none !important;
     background-color: $tw-gray-70;
 
@@ -171,18 +198,17 @@
 
     .bx-soa-section-title-container {
       padding-top: 20px !important;
+      background-color: $tw-gray-70;
 
       @media (min-width: $screen-lg) {
-        margin-bottom: 20px;
+        margin-bottom: 20px !important;
       }
     }
 
-    // .bx-soa-pp-company-smalltitle {
-    //   font-family: 'Circe';
-    //   font-weight: 400;
-    //   @apply  text-lg;
-    //   color: $tw-black;
-    // }
+    .bx-soa-pp-desc-container {
+      padding-left: 30px !important;
+    }
+
 
     .bx-soa-pp-delivery-cost {
       display: flex;
@@ -201,16 +227,9 @@
       }
     }
 
-    // .bx-soa-pp-company-smalldescr {
-    //   margin-top: 10px !important;
-    //   font-size: 14px;
-    //   line-height: 18px;
-    //   color: $tw-gray-500;
-
-    //   p:last-child {
-    //     margin-bottom: 0;
-    //   }
-    // }
+    .bx-soa-pp-company-graf-container .style-checkbox {
+      top: 12px !important;
+    }
   }
 
   &__cost {
@@ -218,7 +237,7 @@
     width: 100%;
   }
 
-  &__paysystem {
+  #bx-soa-paysystem {
     margin-top: 40px;
     box-shadow: none !important;
     background-color: $tw-gray-70;
@@ -234,6 +253,7 @@
 
     .bx-soa-section-title-container {
       padding-top: 20px !important;
+      background-color: $tw-gray-70;
 
       @media (min-width: $screen-lg) {
         margin-bottom: 20px;
@@ -250,6 +270,7 @@
   .tanais-form-group.person-type {
     display: flex;
     margin-bottom: 35px;
+    border-bottom: 1px solid $tw-gray-200;
 
     input {
       display: none;
@@ -261,6 +282,8 @@
       padding-top: 10px;
       padding-bottom: 10px;
       white-space: nowrap;
+      font-size: 16px;
+      line-height: 26px;
       color: $tw-black;
 
       @media (min-width: $screen-lg) {
@@ -271,30 +294,85 @@
     }
 
     .tanais-radio-inline {
-      margin: 0 15px;
+      margin-bottom: -1px !important;
 
       &:first-child {
-        margin-left: 0;
+        label {
+          padding-left: 0 !important;
+          padding-right: 10px !important;
+
+          @media (min-width: $screen-lg) {
+            padding-left: 30px !important;
+            padding-right: 30px !important;
+          }
+        }
       }
 
-      &:last-child {
-        margin-right: 0;
+      &:nth-child(2) {
+        label {
+          padding-left: 10px !important;
+          padding-right: 0 !important;
+
+          @media (min-width: $screen-lg) {
+            padding-left: 30px !important;
+            padding-right: 30px !important;
+          }
+        }
+
       }
 
-      &.checked label {
-        border-bottom: 1px solid $tw-black;
+      label {
+        border: none !important;
+      }
+
+      &.checked {
+        label {
+          border: none !important;
+          border-radius: 0 !important;
+          border-bottom: 1px solid $tw-black !important;
+        }
       }
     }
+
   }
 
-  // .tanais-form-group.bx-soa-location-input-container {
+  //Покупатель
+  #bx-soa-properties {
+    margin-top: 40px;
+  }
 
-  .tanais-form-group {
+  #bx-soa-properties .bx-soa-section-title-container {
+    padding-left: 0;
+    margin-bottom: 35px;
+    background-color: transparent !important;
+  }
+
+  #bx-soa-properties .tanais-form-group {
     position: relative;
     margin-bottom: 30px;
 
     &.bx-soa-customer-field:last-child {
+      display: flex;
+      align-items: start;
       margin-bottom: 20px;
+
+      label {
+        position: static;
+        display: block;
+        width: 95%;
+        transform: none;
+
+        &::after {
+          position: static !important;
+          margin-left: 5px;
+        }
+      }
+
+      .soa-property-container {
+        margin-right: 5px;
+        line-height: 22px;
+        order: -2;
+      }
     }
 
     input,
@@ -318,14 +396,17 @@
     textarea {
       height: 130px !important;
     }
+  }
+
+  #bx-soa-properties .tanais-form-group,
+  .bx_soa_location .tanais-form-group {
 
     .bx-soa-custom-label,
     .bx-soa-customer-label {
       position: absolute;
       top: 0;
       left: 0;
-      padding: 4px;
-      padding-right: 15px;
+      padding: 0 15px 0 4px !important;
       @apply text-sm;
       color: $tw-gray-500;
       background-color: #fff;
@@ -345,6 +426,7 @@
     .bx-sls .bx-ui-sls-container {
       min-height: 51px;
     }
+
   }
 
   .bx-soa-location-input-container {
@@ -386,13 +468,23 @@
     min-height: 51px;
   }
 
+  #bx-soa-delivery,
+  #bx-soa-paysystem {
+    background-color: $tw-gray-70;
+  }
+
   #bx-soa-delivery .bx-soa-section-content,
   #bx-soa-paysystem .bx-soa-section-content {
-    padding-top: 0;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    padding-top: 0 !important;
+    padding-right: 30px !important;
+    padding-left: 30px !important;
+    padding-bottom: 30px !important;
   }
+
+  #bx-soa-paysystem .bx-soa-section-content {
+    padding-left: 56px !important;
+  }
+
 
   #bx-soa-paysystem {
     .bx-soa-pp-company-smalldescr {
@@ -463,9 +555,6 @@
       }
     }
 
-    .bx-soa-section-content {
-      padding: 0;
-    }
 
     .bx-soa-customer {
       @media (min-width: $screen-lg) {
@@ -496,125 +585,100 @@
     }
   }
 
-  &__aside {
-    margin-top: 60px;
+  // &__aside {
+  //   margin-top: 60px;
 
-    @media (min-width: $screen-lg) {
-      grid-column-start: 3;
-      grid-column-end: 4;
-      grid-row-start: 2;
-      grid-row-end: 8;
-      margin-top: 0;
+  //   @media (min-width: $screen-lg) {
+  //     grid-column-start: 3;
+  //     grid-column-end: 4;
+  //     grid-row-start: 2;
+  //     grid-row-end: 8;
+  //     margin-top: 0;
+  //   }
+
+  .bx-soa-cart-total {
+    padding: 0 !important;
+  }
+
+  .bx-soa-cart-total-data,
+  .bx-soa-cart-total-form {
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 5px;
+    box-shadow: none;
+    background-color: $tw-gray-70;
+
+    .bx-total-coupon-container {
+      margin-top: 20px;
     }
+  }
 
-    .bx-soa-cart-total {
-      padding-top: 30px;
-      padding-left: 30px;
-      padding-right: 30px;
-      border-radius: 5px;
-      box-shadow: none;
-      background-color: $tw-gray-70;
+  .bx-soa-cart-total-line {
+    margin-bottom: 9px;
+    border-bottom-style: dashed;
+  }
 
-      .bx-total-coupon-container {
-        margin-top: 20px;
-      }
-    }
+  .bx-soa-cart-total-line-total {
+    margin-top: 0;
+    margin-bottom: 15px !important;
 
-    .bx-soa-cart-total-line {
-      margin-bottom: 9px;
-      border-bottom-style: dashed;
-    }
-
-    .bx-soa-cart-total-line-total {
-      margin-top: 0;
-      margin-bottom: 15px !important;
-
-      .bx-soa-cart-d {
-        @apply text-xl #{!important};
-        color: $tw-black;
-      }
-    }
-
-    .bx-soa-cart-t,
     .bx-soa-cart-d {
-      background-color: $tw-gray-70;
+      @apply text-xl #{!important};
+      color: $tw-black;
     }
+  }
 
-    .bx-soa-cart-t {
-      @apply text-base;
+  .bx-soa-cart-t,
+  .bx-soa-cart-d {
+    background-color: $tw-gray-70;
+  }
+
+  .bx-soa-cart-t {
+    @apply text-base;
+  }
+
+  .btn-order-one-click {
+    margin-bottom: 10px;
+    @include btn-regular;
+    order: -1;
+
+    @media (min-width: $screen-xxl) {
+      margin: 0;
+      margin-right: 10px;
     }
+  }
 
-    .btn-order-one-click {
-      margin-bottom: 10px;
-      @include btn-regular;
+  .btn-order-save {
+    @include btn-regular;
+    background-color: $tw-blue_link;
+    color: #fff;
+    border-color: $tw-blue_link;
 
-      @media (min-width: $screen-lg) {
-        margin-bottom: 0;
-        margin-right: 10px;
-      }
+    @media (min-width: $screen-xxl) {
+      margin: 0;
     }
+  }
 
-    .btn-order-save {
-      @include btn-regular;
-      background-color: $tw-blue_link;
-      color: #fff;
-      border-color: $tw-blue_link;
+  .bx-soa-cart-total-button-container {
+    @media (min-width: $screen-xxl) {
+      display: flex;
     }
+  }
 
-    .bx-soa-cart-total-button-container {
-      @media (min-width: $screen-lg) {
-        display: flex;
-      }
-    }
+  .bx-soa-sidebar {
+    height: auto;
+  }
 
-    .bx-soa-sidebar {
-      height: auto;
-    }
 
-    &--bonus {
-      .bx-soa-coupon {
-        display: none;
+  //Форма корзины в сайдбаре
 
-        &.bx-soa-coupon--bonus {
-          display: block;
-          position: relative;
-        }
-      }
+  .bx-soa-cart-total.bx-soa-cart-total-fixed {
+    position: static;
+  }
 
-      .bx-soa-coupon-block {
-        padding: 24px 30px;
-        background-color: #fff;
-        border-radius: 24px;
-        border: 1px dashed $tw-black;
-        overflow: hidden;
-      }
-
-      .bx-soa-coupon-bonus-name {
-        color: $tw-gray-500;
-        line-height: 1.2;
-      }
-
-      .bx-soa-coupon-bonus-value {
-        color: $tw-gray-500;
-        font-weight: 700;
-        line-height: 1.2;
-      }
-
-      .bx-soa-coupon-title-bonus {
-        margin-bottom: 5px;
-        @apply text-xl;
-        color: $tw-black;
-      }
-
-      .bx-soa-coupon-delete {
-        position: absolute;
-        bottom: 24px;
-        right: 30px;
-        color: $tw-red-900;
-        line-height: 1.1;
-        border-bottom: 1px dashed $tw-red-900;
-      }
-    }
+  .bx-soa-cart-total.bx-soa-cart-total-bottom {
+    opacity: 1 !important;
   }
 
   .bx-soa-cart-total-form {
@@ -625,13 +689,19 @@
       border-color: $tw-blue_link;
     }
 
-    .bx-soa-cart-total-form-close-btn::before, .bx-soa-cart-total-form-close-btn::after {
+    .bx-soa-cart-total-form-close-btn::before,
+    .bx-soa-cart-total-form-close-btn::after {
       background: $tw-black;
     }
 
     .bx-soa-cart-total-form-field span i {
       font-family: 'Montserrat';
     }
+  }
+
+  .tanais-order .btn.btn-outline-primary {
+    color: $tw-black;
+    border-color: $tw-black;
   }
 
   &__bonus {
@@ -659,5 +729,198 @@
     line-height: 24px;
   }
 
+  .bx-authform-starrequired {
+    display: none;
+  }
 
+  #bx-soa-tanais-order .tanais-form-control {
+    height: auto !important;
+    background-color: #fff !important;
+    border: 1px solid $tw-gray-200 !important;
+    border-radius: 4px !important;
+  }
+
+  .bx-soa-tooltip.bx-soa-tooltip-danger .tooltip-inner {
+    height: 100% !important;
+    display: flex;
+    align-items: center;
+    margin-bottom: 0;
+    padding: 0 5px;
+  }
+
+  .bx-sls .bx-ui-sls-pane {
+    top: auto !important;
+  }
+
+  .bx-sls .dropdown-icon {
+    display: none !important;
+  }
+
+  .bx-soa-tooltip.bx-soa-tooltip-static {
+    position: absolute;
+    top: 100%;
+  }
+
+  .bx-sls .dropdown-fade2white {
+    top: 1px !important;
+    bottom: 1px !important;
+    height: auto !important;
+  }
+
+  .tanais-order .bx-sls .bx-ui-sls-clear {
+    margin-top: 0 !important;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .tanais-order #bx-soa-delivery .bx-soa-pp-company-graf-container .bx-soa-pp-company-smalltitle span,
+  .tanais-order #bx-soa-delivery .bx-soa-pp-company-graf-container .bx-soa-pp-delivery-cost {
+    background-color: $tw-gray-70 !important;
+  }
+
+
+  .bx-soa-section-content {
+    padding: 0 !important;
+  }
+
+  .bx-soa-section-title-icon {
+    display: none !important;
+  }
+
+  .soa-property-container.has-soa-action-button .btn {
+    display: flex;
+    align-items: center;
+  }
+
+  //Город
+  .tanais-order .bx-sls .bx-ui-sls-route,
+  .tanais-order .bx-sls .bx-ui-sls-fake {
+    height: 100% !important;
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  #bx-soa-orderSave .btn {
+    border-radius: 78px;
+
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: #14142b;
+    }
+  }
+
+  // Поле-счетчик
+  #tanais-basket-root .basket-item-amount-filed {
+    font-weight: 400 !important;
+    border: none !important;
+    background-color: transparent !important;
+  }
+
+  //
+  .btn--angle-left {
+    position: relative;
+
+    &::before {
+      content: '';
+      position: absolute;
+      width: 4px;
+      height: 7px;
+      left: 12px;
+      top: 50%;
+      color: #007cd3;
+      background-image: url('/img/angle-left.svg');
+      transform: translateY(-75%);
+    }
+  }
+
+  //  Корзина кнопки
+  .tanais-order .btn.btn-default,
+  .tanais-order .btn.btn-outline-primary {
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: #14142b !important;
+    }
+  }
+
+  #bx-soa-tanais-order-form .bx-soa-custom-label {
+    display: block;
+
+    .bx-authform-starrequired {
+      // order: -2;
+
+      &~a {
+        padding-left: 5px;
+        font-size: 14px !important;
+        font-weight: 700;
+        text-decoration: underline;
+
+        // order: -2 !important;
+        &:hover,
+        &:focus,
+        &:active {
+          text-decoration: none;
+        }
+      }
+    }
+  }
+
+  //Купон (промокод)
+  .bx-soa-coupon-item {
+    position: relative;
+    display: block;
+    padding: 22px 20px;
+    border-radius: 24px;
+    border: 1px dashed #14142B;
+    background-color: #fff;
+  }
+
+  .bx-soa-coupon {
+
+    &.bx-soa-coupon--bonus {
+      display: block;
+      position: relative;
+    }
+  }
+
+  .bx-soa-coupon-block {
+    padding: 0;
+    background-color: #fff;
+    border-radius: 10px;
+    border: none;
+    overflow: hidden;
+  }
+
+  .bx-soa-coupon-bonus-name {
+    color: $tw-gray-500;
+    line-height: 1.2;
+  }
+
+  .bx-soa-coupon-bonus-value {
+    color: $tw-gray-500;
+    font-weight: 700;
+    line-height: 1.2;
+  }
+
+  .bx-soa-coupon-title-bonus {
+    margin-bottom: 5px;
+    @apply text-xl;
+    color: $tw-black;
+  }
+
+  .bx-soa-coupon-delete {
+    position: absolute;
+    display: block;
+    width: auto;
+    margin-left: 0;
+    top: auto;
+    bottom: 22px;
+    right: 30px;
+    color: $tw-red-900;
+    line-height: 1.1;
+    border-bottom: 1px dashed $tw-red-900;
+    background-image: none;
+    background: none;
+  }
 }
