--- a/src/blocks/field-num/field-num.scss
+++ b/src/blocks/field-num/field-num.scss
@@ -42,9 +42,14 @@
 
     .cart-product & {
       @media (min-width: $screen-lg) {
-        padding: 0 40px;
-        font-size: 18px;
-        line-height: 32px;
+        width: 100% !important;
+        padding: 0 40px !important;
+        font-size: 18px !important;
+        font-weight: 400 !important;
+        line-height: 32px !important;
+        background-color: transparent !important;
+        outline: none !important;
+        border: none !important;
       }
     }
   }
@@ -77,6 +82,7 @@
       top: 50%;
       width: 8px;
       height: 1px;
+      margin: 0 !important;
       background-color: $tw-black;
       transform: translate(-50%,-50%);
     }
@@ -98,6 +104,7 @@
         top: 50%;
         width: 1px;
         height: 8px;
+        margin: 0 !important;
         background-color: $tw-black;
         transform: translate(-50%,-50%);
       }
