--- a/src/blocks/slider-main/slider-main.pug
+++ b/src/blocks/slider-main/slider-main.pug
@@ -60,9 +60,23 @@ mixin slider-item--main(props)
   .slider-main__item.slider-item&attributes(attributes)
     .slider-main__item-inner
       .slider-main__media.slider-main__media--video-bg
-          video(width=props.width height=props.height preload="none" poster="video/" + props.poster muted)
+          video(width=props.width height=props.height poster="video/" + props.poster muted)
             source(src=props.url type=props.type)
           .slider-main__btn-play
       .container.lg_flex.lg_flex-col.lg_justify-center.lg_px-64px.xl_block.xl_pl-130px.xl_pr-60px.xxl_pl-180px.xxl_pr-80px
         block
+
+mixin slider-item--main-test(props)
+
+  -
+    if (typeof(props) == 'undefined')
+      props = {};
+
+  .slider-main__item.slider-item&attributes(attributes)
+    .slider-main__item-inner
+      .slider-main__media.slider-main__media--video-bg
+        video(width=props.width height=props.height preload="none" poster="video/" + props.poster muted)
+      .container.lg_flex.lg_flex-col.lg_justify-center.lg_px-64px.xl_block.xl_pl-130px.xl_pr-60px.xxl_pl-180px.xxl_pr-80px
+        block
+
 
