--- a/src/pages/addClasses.pug
+++ b/src/pages/addClasses.pug
@@ -1,8 +1,9 @@
 .opacity-100
-<div class='!opacity-100 lg_!hidden !text-black'></div>
+<div class='!opacity-100 lg_!hidden !text-black !hidden'></div>
 .w-200px
 .w-300px
 .w-400px
 .w-500px
 .w-600px
 .grid-cols-2-300px
+
